# osm-polygon-wikidata-only

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  development.md
docs/superpowers/plans/: 2026-07-09-pipeline-performance.md  2026-07-10-complete-api-pipeline.md  2026-07-10-per-host-throttling.md  (+14 more)
scripts/: audit_containment.py  audit_remote.py
src/osm_polygon_wikidata_only/: __init__.py
tests/: test_analysis.py  test_augmentation.py  test_cli.py  test_cli_dependencies.py  test_coverage_map.py  test_dependencies.py  test_documentation.py  test_end_to_end.py  test_enrichment.py  test_enrichment_progress.py  test_geographic_text_coverage.py  test_hf.py  test_ids.py  test_io_cache.py  test_io_manifest.py  test_packaging.py  test_pipeline.py  test_public_api.py  test_request_scheduler.py  test_retry_after.py  test_run_lock.py  test_scheduler_simulation.py  test_schema.py  test_sync_orchestrator.py  test_sync_planner.py  test_sync_progress.py  test_utils.py  test_wikimedia_auth.py  test_wikimedia_transport_clients.py  test_wikipedia_split.py
tests/augmentation/: test_augmentation.py  test_augmentation_split.py  test_canonical_wikipedia_documents.py  test_integrity.py  test_manifest_hash_path_validation.py  test_manifest_source_selection.py  test_wikipedia_source_paths.py
tests/cli/: test_cli.py  test_cli_dependencies.py  test_dependencies.py  test_migration_coordination.py
tests/contracts/: test_cli_help_frozen.py  test_cli_surface.py  test_containment_publication.py  test_dataset_card.py  test_dataset_card_augmentation.py  test_dataset_schemas.py  test_fixtures_dataset_schemas.py  test_golden_outputs.py  test_processor_decomposition.py  test_public_imports.py  test_publication.py  test_publication_augmentation.py  test_publication_ownership.py  test_remote_paths.py  test_resumability.py  test_scheduler_auth_snapshot.py  test_sync_plan.py  test_sync_runner_decomposition.py  test_wikidata_recovery_ownership.py
tests/enrichment/: test_enrichment.py  test_enrichment_progress.py  test_wikidata_integrity_semantics.py  test_wikidata_split.py  test_wikimedia_auth.py  test_wikimedia_facade.py  test_wikimedia_http.py  test_wikimedia_transport.py  test_wikimedia_transport_clients.py
tests/fixtures/: _builders.py
tests/hf/: test_actionable_errors.py  test_augmentation_stats.py  test_combined_language_stats.py  test_coverage_map.py  test_dataset_stats.py  test_geographic_text_coverage.py  test_hf.py  test_public_dataset_card_geography.py  test_reconciliation.py
tests/io/: test_atomic_write.py  test_io_parquet.py
tests/migration/: __init__.py  audit.py  test_containment_migration.py  test_containment_policy.py  test_crash_restart_lifecycle.py  test_paired_retirement_path_validation.py  test_paired_retirement_validation.py  test_wikipedia_document_backfill.py  test_wikipedia_retirement.py  test_wikipedia_storage_audit.py  test_wikipedia_storage_contract.py
tests/pipeline/: test_end_to_end.py  test_local_validation_progress.py  test_pipeline.py  test_publish_before_process.py  test_sync_planner_ordering.py  test_sync_reconciliation.py  test_sync_recovery_integration.py  test_sync_runner_ordering.py  test_wikidata_recovery_audit.py  test_wikidata_recovery_checkpoints.py  test_wikidata_recovery_progress.py  test_wikidata_recovery_repair.py  test_wikidata_recovery_throughput.py
(+176 files in other folders)
