[project]
name = "osm-polygon-wikidata-only"
version = "0.1.0"
description = "Extract OSM polygons with wikidata tags into a Hugging Face dataset."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Noé Flandre" }]
license = { file = "LICENSE" }
keywords = ["openstreetmap", "wikidata", "wikipedia", "geospatial", "parquet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "datasets>=3.0",
    "h3>=4.0",
    "huggingface-hub>=0.24",
    "matplotlib>=3.8",
    "osmium>=3.7",
    "pyarrow>=16",
]

[project.scripts]
osm-polygon-wikidata-only = "osm_polygon_wikidata_only.cli.app:run"
osm-polygon-wikidata-only-enforce-integrity = "osm_polygon_wikidata_only.cli.enforce_integrity:run"

[project.urls]
Source = "https://github.com/NoeFlandre/osm-polygon-wikidata-only"
Issues = "https://github.com/NoeFlandre/osm-polygon-wikidata-only/issues"
Dataset = "https://huggingface.co/datasets/NoeFlandre/osm-polygon-wikidata-only"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_polygon_wikidata_only"]

[tool.hatch.build.targets.wheel.force-include]
"src/osm_polygon_wikidata_only/hf/ne_110m_admin_0_countries.geojson" = "osm_polygon_wikidata_only/hf/ne_110m_admin_0_countries.geojson"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that read a real PBF fixture",
]
filterwarnings = [
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:s3transfer.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC", "S", "TID"]
ignore = [
    "S101",  # asserts are fine in tests
    "S104",  # binding to all interfaces is fine for local-only services
    "S311",  # we don't use random for crypto
    "E501",  # line length is enforced by the formatter
    "B008",  # function call in argument default is fine for dataclass field defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B", "SIM"]
"src/osm_polygon_wikidata_only/enrichment/*.py" = ["S310"]
"src/osm_polygon_wikidata_only/hf/coverage_map.py" = ["S310"]
"src/osm_polygon_wikidata_only/hf/uploader.py" = ["S310"]
"tests/fixtures/_builders.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
plugins = []
# Third-party libs without complete type stubs.
[[tool.mypy.overrides]]
module = ["osmium.*", "h3.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/osm_polygon_wikidata_only"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
